--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ohamjoseph.github.io-conference",
+  "homepage": "https://ohamjoseph.github.io/cnrst-sist-2021",
   "name": "conference",
   "version": "0.1.0",
   "private": true,
