--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://ohamjoseph.github.io/cnrst-sist-2021",
   "name": "conference",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
